DDI-Lifecycle/3.3/model/_sources/composite-types/GeographicCoverageType/index.rst.txt
GeographicCoverageType
----------------------

Describes the geographic coverage of the data documented in a particular DDI module. If subordinate to another module, this description should be a sub-set of the parent module's geographic coverage. Contains a definition for a Bounding Box used for coordinate searches, a definition of the geographic coverage, a reference to a variable that describes the geographic structure, definition of the spatial object of the data, a reference to a GeographicStructure and GeographicLocation providing further details of the coverage, and specification of the geographic summary levels for which data are provided, the top and lowest levels of geographic identification provided.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "BoundingBox",":doc:`/composite-types/BoundingBoxType/index`","0..1","The Bounding Box is a 'rectangle, oriented to the x and y axes, which bounds a geographic feature or a geographic dataset. It is specified by two coordinates: xmin, ymin and xmax, ymax.' [FGDC]. In the DDI, it describes the full extent of the geographic coverage, and is designed to be used by systems that search for geography by coordinates. It is compatible with the description and structure found in FGDC and other geographic metadata structures."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A summary description of the geographic (spatial) coverage of the module. It may include information on all levels of spatial coverage, in addition to the overall coverage. This field can map to Dublin Core Coverage, which does not support structured strings. Therefore, if there is intent to map to Dublin Core, the text should not be marked up with XHTML. Supports multiple language versions of the same content as well as optional formatting of the content."
   "CountryCode",":doc:`/composite-types/CountryCodeType/index`","0..n","Serves as head of a substitution group for specifying ISO 3166 Country Codes or use of unspecified text. Use of ISO 3166 Country codes strongly recommended. Repeat for each country. If"
   "GeographyStructureVariableReference",":doc:`/item-types/Variable/index`","0..1","References a variable describing the geographic levels available in the data such as the variable ""Summary Level"" in U.S. Census data. This reference is needed for assistance in programming."
   "SpatialObject","string","0..1","Contains information on the most discrete type of spatial representation to which data described by this module can be attached (point, line, polygon, linear ring). For example, a raw data file with an address attached to each case is 'point'. When the microdata file is anonymized and the geographic information is for a state or other defined area, it is 'polygon'. Some data, such as traffic or criminal incidence data may have a street range identification or 'line', and some such as communications data have a point with a radius or 'linear ring'."
   "GeographicStructureReference",":doc:`/item-types/GeographicStructure/index`","0..1","Reference to the detailed information found in a GeographicStructure. Allows for the exclusion of specified LevelValues."
   "GeographicLevelReference",":doc:`/composite-types/GeographicLevelType/index`","0..1","Reference to specific LevelValue found in a GeographicStructure. Use when only a limited number of GeographicLevel are used from a GeographicStructure."
   "GeographicLocationReference",":doc:`/item-types/GeographicLocation/index`","0..1","Reference to detailed listing of named locations within the data described by a 	GeographicLocation."
   "LocationValueReference",":doc:`/composite-types/LocationValueType/index`","0..1","Reference to specific LocationValue found in a GeographicLocation. Use when only a limited number of LocationValue are used from a GeographicStructure."
   "SummaryDataReference",":doc:`/composite-types/GeographicLevelType/index`","0..n","May be repeated to reference each geography (geographic level) for which there is summary data. For example, person records may contain summary data on the State, County, or City in which they reside. In data collections where the individual case is a geographic location such as a County, data may be provided that summarizes State or National data. This is often true where data suppression at lower geographies makes it impossible to roll-up or aggregate the data to obtain values for the higher levels."
   "HighestLevelReference",":doc:`/composite-types/LevelReferenceType/index`","0..1","Reference to the top or highest GeographicLevel."
   "LowestLevelReference",":doc:`/composite-types/LevelReferenceType/index`","0..1","Reference to the bottom or lowest GeographicLevel."

Properties Inherited from IdentifiableType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/IdentifiableType/index`
    * **GeographicCoverageType**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/composite-types/CoverageType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/GeographicCoverageType.svg

